--- a/01_Getting_&_Knowing_Your_Data/World Food Facts/Exercises_suny.ipynb
+++ b/01_Getting_&_Knowing_Your_Data/World Food Facts/Exercises_suny.ipynb
@@ -19,11 +19,11 @@
         "import pandas as pd"
       ],
       "metadata": {
-        "id": "SlorvTtLQTxi",
-        "outputId": "8d562d78-caba-4a59-80b3-b73f719b77a6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "SlorvTtLQTxi",
+        "outputId": "8d562d78-caba-4a59-80b3-b73f719b77a6"
       },
       "execution_count": 6,
       "outputs": [
@@ -77,11 +77,11 @@
       "execution_count": 8,
       "metadata": {
         "collapsed": true,
-        "id": "T_27ixG7QHlv",
-        "outputId": "00327794-a012-4bed-83e2-60d83ee0c4a7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "T_27ixG7QHlv",
+        "outputId": "00327794-a012-4bed-83e2-60d83ee0c4a7"
       },
       "outputs": [
         {
@@ -112,12 +112,12 @@
       "execution_count": 9,
       "metadata": {
         "collapsed": true,
-        "id": "YaswSg_dQHlw",
-        "outputId": "bb64a9ac-a8c1-4331-a74c-7a1378800e74",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 406
-        }
+        },
+        "id": "YaswSg_dQHlw",
+        "outputId": "bb64a9ac-a8c1-4331-a74c-7a1378800e74"
       },
       "outputs": [
         {
@@ -581,11 +581,11 @@
       "execution_count": 10,
       "metadata": {
         "collapsed": true,
-        "id": "1xmlSbnDQHlw",
-        "outputId": "db67790d-4f00-439a-96d4-7e9153343e45",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "1xmlSbnDQHlw",
+        "outputId": "db67790d-4f00-439a-96d4-7e9153343e45"
       },
       "outputs": [
         {
@@ -617,11 +617,11 @@
       "execution_count": 11,
       "metadata": {
         "collapsed": true,
-        "id": "y33LKsLfQHlx",
-        "outputId": "93fc0457-3e2e-4ea0-a1bb-432c26314082",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "y33LKsLfQHlx",
+        "outputId": "93fc0457-3e2e-4ea0-a1bb-432c26314082"
       },
       "outputs": [
         {
@@ -653,11 +653,11 @@
       "execution_count": 13,
       "metadata": {
         "collapsed": true,
-        "id": "Olns9m5nQHly",
-        "outputId": "40a50d00-14a7-4686-d583-5e3a1f173379",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Olns9m5nQHly",
+        "outputId": "40a50d00-14a7-4686-d583-5e3a1f173379"
       },
       "outputs": [
         {
@@ -851,12 +851,12 @@
       "execution_count": 14,
       "metadata": {
         "collapsed": true,
-        "id": "ntmqH47YQHlz",
-        "outputId": "12803ecd-ec35-40ee-91ba-e17081421850",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "id": "ntmqH47YQHlz",
+        "outputId": "12803ecd-ec35-40ee-91ba-e17081421850"
       },
       "outputs": [
         {
@@ -891,11 +891,11 @@
       "execution_count": 16,
       "metadata": {
         "collapsed": true,
-        "id": "J323fTiDQHl0",
-        "outputId": "8f0d6004-c5c7-4f64-85ac-30b4d0c67a2d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "J323fTiDQHl0",
+        "outputId": "8f0d6004-c5c7-4f64-85ac-30b4d0c67a2d"
       },
       "outputs": [
         {
@@ -927,11 +927,11 @@
       "execution_count": 17,
       "metadata": {
         "collapsed": true,
-        "id": "6ODgkwlOQHl0",
-        "outputId": "8692ba48-1a2a-4202-d44c-c49c8fae7016",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "6ODgkwlOQHl0",
+        "outputId": "8692ba48-1a2a-4202-d44c-c49c8fae7016"
       },
       "outputs": [
         {
@@ -960,33 +960,49 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 20,
       "metadata": {
         "collapsed": true,
-        "id": "-RB9_4tHQHl1",
-        "outputId": "79a7a691-d0d8-444a-d6e5-a084a13b1b66",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        }
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-RB9_4tHQHl1",
+        "outputId": "8b1a6d79-435f-48b9-d6dc-fe7141b99fae"
       },
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "'Lotus Organic Brown Jasmine Rice'"
-            ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            }
-          },
-          "metadata": {},
-          "execution_count": 18
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "193 µs ± 21 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
+          ]
         }
       ],
       "source": [
-        "food.iloc[18]['product_name']"
+        "%timeit food.iloc[18]['product_name']"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%timeit food.at[18, 'product_name']"
+      ],
+      "metadata": {
+        "id": "2KVTv4JeSk1y",
+        "outputId": "d6bc583e-53b9-418e-9548-47d14c5642da",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "4.6 µs ± 607 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n"
+          ]
+        }
       ]
     }
   ],
